# food-donations

./: .gitignore  app.py  constants.py  db.py  db_operations.py  input_parser.py  main.py  models.py  old_main.py  pyproject.toml  queries.py  requirements.txt  scanner.py  sql_tables.py  totals.py  weight_extractor.py
.streamlit/: config.toml
db/: constants.py  operations.py
services/: inventory_updater.py
src/: app.py  barcode_processor.py  input_parser.py  layout.py  models.py
src/db/: operations.py
src/services/: weight_extractor.py
