[tool.poetry]
name = "chatbot-showcase"
version = "0.1.0"
description = ""
authors = ["itsthomashere <thomasadam.leigh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-option-menu = "^0.3.6"
streamlit = "^1.28.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
openai = "^1.3.6"
langchain = "^0.0.343"
pandas = "^2.1.3"
numpy = "^1.26.4"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
